[metadata]
name = osc-plugin
summary = Reference API client and OSC plugin lib
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    oscplugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[compile_catalog]
directory = oscplugin/locale
domain = osc-plugin

[update_catalog]
domain = osc-plugin
output_dir = oscplugin/locale
input_file = oscplugin/locale/osc-plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oscplugin/locale/osc-plugin.pot

[entry_points]
openstack.cli.extension =
    oscplugin = oscplugin.plugin

openstack.oscplugin.v1 =
    plugin_list = oscplugin.v1.plugin:ListPlugin
    plugin_show = oscplugin.v1.plugin:ShowPlugin
    plugin_catalog_show = oscplugin.v1.plugin:ShowCatalog
